# photon-plugin-switch-server

./: CMakeLists.txt  README.md  serverswitch.c
